--- a/Grand.Web/Areas/Admin/Views/Product/_CreateOrUpdate.Info.cshtml
+++ b/Grand.Web/Areas/Admin/Views/Product/_CreateOrUpdate.Info.cshtml
@@ -77,6 +77,7 @@
             $('#tab-attributes-product').show();
             $('#tab-purchased-product').show();
             $('#tab-calendar').hide();
+            $('#tab-resources').hide();
             $('#tab-bundle-products').hide();
             $('#tab-bids').hide();
         } else if (selectedProductTypeId == @(((int) ProductType.GroupedProduct).ToString())) {
@@ -93,6 +94,7 @@
             $('#tab-attributes-product').hide();
             $('#tab-purchased-product').hide();
             $('#tab-calendar').hide();
+            $('#tab-resources').hide();
             $('#tab-bundle-products').hide();
             $('#tab-bids').hide();
         } else if (selectedProductTypeId == @(((int) ProductType.Reservation).ToString())){
@@ -109,6 +111,7 @@
             $('#tab-attributes-product').show();
             $('#tab-purchased-product').show();
             $('#tab-calendar').show();
+            $('#tab-resources').show();
             $('#tab-bundle-products').hide();
             $('#tab-bids').hide();
             $("#@Html.FieldIdFor(model => model.ManageInventoryMethodId)").val("0");
@@ -132,12 +135,14 @@
             $('#tab-attributes-product').show();
             $('#tab-purchased-product').show();
             $('#tab-calendar').hide();
+            $('#tab-resources').hide();
             $('#tab-bundle-products').show();
             $('#tab-bids').hide();
             $("#@Html.FieldIdFor(model => model.IsRecurring)").prop("checked", false);
         } else if (selectedProductTypeId == @(((int) ProductType.Auction).ToString())){
             $('#tab-bids').show();
             $('#tab-calendar').hide();
+            $('#tab-resources').hide();
             $('#tab-bundle-products').hide();
             $('#tab-attributes-product').hide();
             $('#group-required-other-products').hide();
