--- a/Grand.Web/Areas/Admin/Views/Product/_CreateOrUpdate.Resources.cshtml
+++ b/Grand.Web/Areas/Admin/Views/Product/_CreateOrUpdate.Resources.cshtml
@@ -2,35 +2,40 @@
 
 @if (!String.IsNullOrEmpty(Model.Id))
 {
-    <div class="panel panel-default">
-        <div class="panel-body">
-            <div id="relatedproducts-grid"></div>
-        </div>
-        <div class="panel-footer">
-            <input type="submit" id="btnAddNewRelatedProduct" value="@T("Admin.Catalog.Products.RelatedProducts.AddNew")" onclick="javascript:OpenWindow('@(Url.Action("RelatedProductAddPopup", "Product", new { productId = Model.Id, btnId = "btnRefreshRelatedProducts", formId = "product-form" }))    ', 800, 800, true); return false;" class="k-button" />
-            <input type="submit" id="btnRefreshRelatedProducts" style="display: none" />
-        </div>
+<div class="panel panel-default">
+    <div class="panel-body">
+        <div id="resources-grid"></div>
     </div>
+    <div class="panel-footer" style="display: none">
+        <input type="submit" id="btnRefreshResources" style="display: none" />
+    </div>
+</div>
 
-    <script>
+<script>
         $(document).ready(function () {
-            $("#relatedproducts-grid").kendoGrid({
+            $("#resources-grid").kendoGrid({
                 dataSource: {
                     transport: {
+                        create: {
+                            url: "@Html.Raw(Url.Action("ResourceAdd", "Product", new { productId = Model.Id }))",
+                            type: "POST",
+                            dataType: "json",
+                            data: addAntiForgeryToken
+                        },
                         read: {
-                            url: "@Html.Raw(Url.Action("RelatedProductList", "Product", new { productId = Model.Id }))",
+                            url: "@Html.Raw(Url.Action("ResourceList", "Product", new { productId = Model.Id }))",
                             type: "POST",
                             dataType: "json",
                             data: addAntiForgeryToken
                         },
                         update: {
-                            url:"@Html.Raw(Url.Action("RelatedProductUpdate", "Product"))",
+                            url:"@Html.Raw(Url.Action("ResourceUpdate", "Product"))",
                             type: "POST",
                             dataType: "json",
                             data: addAntiForgeryToken
                         },
                         destroy: {
-                            url: "@Html.Raw(Url.Action("RelatedProductDelete", "Product"))",
+                            url: "@Html.Raw(Url.Action("ResourceDelete", "Product"))",
                             type: "POST",
                             dataType: "json",
                             data: addAntiForgeryToken
@@ -43,9 +48,8 @@
                         model: {
                             id: "Id",
                             fields: {
-                                Product2Name: { editable: false, type: "string" },
-                                DisplayOrder: {editable: true, type: "number" },
-                                ProductId2: { editable: false, type: "string" }
+                                Name: { editable: true, type: "string" },
+                                SystemName: { editable: true, type: "string" }
                             }
                         }
                     },
@@ -69,23 +73,20 @@
                     previousNext: false,
                     info: false
                 },
+                toolbar: [{ name: "create", text: "@T("Admin.Common.AddNewRecord")" }],
                 editable: {
-                    confirmation: false,
+                    confirmation: true,
                     mode: "inline"
                 },
                 scrollable: false,
                 columns: [{
-                    field: "Product2Name",
-                    title: "@T("Admin.Catalog.Products.RelatedProducts.Fields.Product")",
-                    template: '<a class="k-link" href="@Url.Content("~/Admin/Product/Edit/")#=ProductId2#">#=Product2Name#</a>',
+                    field: "Name",
+                    title: "@T("Admin.Catalog.Products.Resources.Fields.Name")",
+                    template: '#=Name#',
                 }, {
-                    field: "DisplayOrder",
-                    title: "@T("Admin.Catalog.Products.RelatedProducts.Fields.DisplayOrder")",
-                    //integer format
-                    format: "{0:0}",
-                    width: 80,
-                    headerAttributes: { style: "text-align:center" },
-                    attributes: { style: "text-align:center" },
+                    field: "SystemName",
+                    title: "@T("Admin.Catalog.Products.Resources.Fields.SystemName")",
+                    template: '#=SystemName#',
                 }, {
                     command: [{
                         name: "edit",
@@ -101,25 +102,25 @@
                 }]
             });
         });
-    </script>
-           
-    <script type="text/javascript">
-        $(document).ready(function () {
-            $('#btnRefreshRelatedProducts').click(function () {
-                //refresh grid
-                var grid = $("#relatedproducts-grid").data('kendoGrid');
-                grid.dataSource.read();
+</script>
 
-                //return false to don't reload a page
-                return false;
-            });
+<script type="text/javascript">
+    $(document).ready(function () {
+        $('#btnRefreshResources').click(function () {
+            //refresh grid
+            var grid = $("#resources-grid").data('kendoGrid');
+            grid.dataSource.read();
+
+            //return false to don't reload a page
+            return false;
         });
-    </script>
+    });
+</script>
 
 }
 else
 {
-    <div class="note note-info">
-        @T("Admin.Catalog.Products.RelatedProducts.SaveBeforeEdit")
-    </div>
+<div class="note note-info">
+    @T("Admin.Catalog.Products.Resources.SaveBeforeEdit")
+</div>
 }
