--- a/Grand.Web/Areas/Admin/Views/Product/_CreateOrUpdate.cshtml
+++ b/Grand.Web/Areas/Admin/Views/Product/_CreateOrUpdate.cshtml
@@ -76,21 +76,28 @@
                 </div>
             </content>
         </tabstrip-item>
-        <tabstrip-item text="@T("Admin.Catalog.Products.Calendar")" tab-index="10" id="tab-calendar">
+        <tabstrip-item text="@T("Admin.Catalog.Products.Resources")" tab-index="10" id="tab-resources">
+            <content>
+                <div>
+                    <partial name="_CreateOrUpdate.Resources" model="Model" />
+                </div>
+            </content>
+        </tabstrip-item>
+        <tabstrip-item text="@T("Admin.Catalog.Products.Calendar")" tab-index="11" id="tab-calendar">
             <content>
                 <div>
                     <partial name="_CreateOrUpdate.Calendar" model="Model" />
                 </div>
             </content>
         </tabstrip-item>
-        <tabstrip-item text="@T("Admin.Catalog.Products.Bids")" tab-index="11" id="tab-bids">
+        <tabstrip-item text="@T("Admin.Catalog.Products.Bids")" tab-index="12" id="tab-bids">
             <content>
                 <div>
                     <partial name="_CreateOrUpdate.Bids" model="Model" />
                 </div>
             </content>
         </tabstrip-item>
-        <tabstrip-item text="@T("Admin.Catalog.Products.AclStores")" tab-index="12">
+        <tabstrip-item text="@T("Admin.Catalog.Products.AclStores")" tab-index="13">
             <content>
                 <div>
                     <partial name="_TabAcl" model="Model" />
@@ -98,28 +105,28 @@
                 </div>
             </content>
         </tabstrip-item>
-        <tabstrip-item text="@T("Admin.Catalog.Products.RelatedProducts")" tab-index="13">
+        <tabstrip-item text="@T("Admin.Catalog.Products.RelatedProducts")" tab-index="14">
             <content>
                 <div>
                     <partial name="_CreateOrUpdate.RelatedProducts" model="Model" />
                 </div>
             </content>
         </tabstrip-item>
-        <tabstrip-item text="@T("Admin.Catalog.Products.SimilarProducts")" tab-index="14">
+        <tabstrip-item text="@T("Admin.Catalog.Products.SimilarProducts")" tab-index="15">
             <content>
                 <div>
                     <partial name="_CreateOrUpdate.SimilarProducts" model="Model" />
                 </div>
             </content>
         </tabstrip-item>
-        <tabstrip-item text="@T("Admin.Catalog.Products.CrossSells")" tab-index="15">
+        <tabstrip-item text="@T("Admin.Catalog.Products.CrossSells")" tab-index="16">
             <content>
                 <div>
                     <partial name="_CreateOrUpdate.CrossSells" model="Model" />
                 </div>
             </content>
         </tabstrip-item>
-        <tabstrip-item text="@T("Admin.Catalog.Products.AssociatedProducts")" tab-index="16" id="tab-associated-products">
+        <tabstrip-item text="@T("Admin.Catalog.Products.AssociatedProducts")" tab-index="17" id="tab-associated-products">
             <content>
                 <div>
                     <partial name="_CreateOrUpdate.AssociatedProducts" model="Model" />
@@ -128,21 +135,21 @@
         </tabstrip-item>
         @if (!String.IsNullOrEmpty(Model.Id))
         {
-            <tabstrip-item text="@T("Admin.Catalog.Products.ActivityLog")" tab-index="17">
+            <tabstrip-item text="@T("Admin.Catalog.Products.ActivityLog")" tab-index="18">
                 <content>
                     <div>
                         <partial name="_CreateOrUpdate.Activitylog" model="Model" />
                     </div>
                 </content>
             </tabstrip-item>
-            <tabstrip-item text="@T("Admin.Catalog.Products.PurchasedWithOrders")" tab-index="18" id="tab-purchased-product">
+            <tabstrip-item text="@T("Admin.Catalog.Products.PurchasedWithOrders")" tab-index="19" id="tab-purchased-product">
                 <content>
                     <div>
                         <partial name="_CreateOrUpdate.PurchasedWithOrders" model="Model" />
                     </div>
                 </content>
             </tabstrip-item>
-            <tabstrip-item text="@T("Admin.Catalog.Products.Reviews")" tab-index="19">
+            <tabstrip-item text="@T("Admin.Catalog.Products.Reviews")" tab-index="20">
                 <content>
                     <div>
                         <partial name="_CreateOrUpdate.Reviews" model="Model" />
