Dynamic recalculation of price based on selected quantity

--- a/Grand.Web/Areas/Admin/Views/Product/_CreateOrUpdate.Resources.cshtml
+++ b/Grand.Web/Areas/Admin/Views/Product/_CreateOrUpdate.Resources.cshtml
@@ -49,7 +49,8 @@
                             id: "Id",
                             fields: {
                                 Name: { editable: true, type: "string" },
-                                SystemName: { editable: true, type: "string" }
+                                SystemName: { editable: true, type: "string" },
+                                AllowReservationTimeOverlap: { editable: true, type: "boolean" }
                             }
                         }
                     },
@@ -87,6 +88,10 @@
                     field: "SystemName",
                     title: "@T("Admin.Catalog.Products.Resources.Fields.SystemName")",
                     template: '#=SystemName#',
+                }, {
+                    field: "AllowReservationTimeOverlap",
+                    title: "@T("Admin.Catalog.Products.Resources.Fields.AllowReservationTimeOverlap")",
+                    template: '<input type="checkbox" #= AllowReservationTimeOverlap ? "checked=checked" : "" # disabled="disabled"/>'
                 }, {
                     command: [{
                         name: "edit",
