--- a/Grand.Web/Views/Product/_ReservationInfo.cshtml
+++ b/Grand.Web/Views/Product/_ReservationInfo.cshtml
@@ -47,6 +47,6 @@
     $(document).ready(function () {
         Reservation.init("@Model.StartDate.ToString("d", CultureInfo.CreateSpecificCulture("en-US"))", "@Model.StartDate.Year", "@Model.StartDate.Month", "@T("Products.Noavailablereservations")",
             "@(Url.Action("GetDatesForMonth", "Product"))", "@Model.Id",
-            "@Html.Raw(Url.Action("productdetails_attributechange", "product", new { productId = Model.Id, validateAttributeConditions = false }))");
+            "@Html.Raw(Url.Action("productdetails_attributechange", "product", new { productId = Model.Id, validateAttributeConditions = false, quantity = "QUANTITY_PLACEHOLDER" }))", "@(string.Format("addtocart_{0}_EnteredQuantity", Model.Id))");
     });
 </script>
