--- a/Grand.Web/Areas/Admin/Views/Shared/Components/ReservationsGantt/Default.cshtml
+++ b/Grand.Web/Areas/Admin/Views/Shared/Components/ReservationsGantt/Default.cshtml
@@ -1,121 +1,86 @@
-﻿<div id="gantt"></div>
+﻿<div style="position:relative" class="gantt" id="reservations-gantt"></div>
+<button type="button" id="mybut">Test</button>
 
 <script type="text/javascript">
     $(document).ready(function () {
 
-        function initializeGantt() {
+        var g = new JSGantt.GanttChart(document.getElementById('reservations-gantt'), 'day');
 
-            $.ajax({
+        $('#mybut').click(reloadGantt);
 
-            })
+        function reloadGantt() {
 
+            g.RemoveTaskItem(666);
+
+            g.Draw();
+
+            //g.AddTaskItemObject({
+            //  pID: 12,
+            //  pName: "DUPA JASIA",
+            //  pStart: "2017-02-25",
+            //  pEnd: "2017-03-17",
+            //  pPlanStart: "2017-04-01",
+            //  pPlanEnd: "2017-04-15 12:00",
+            //  pClass: "ggroupblack",
+            //  pLink: "",
+            //  pMile: 0,
+            //  pRes: "Brian",
+            //  pComp: 0,
+            //  pGroup: 1,
+            //  pParent: 0,
+            //  pOpen: 1,
+            //  pDepend: "",
+            //  pCaption: "",
+            //  pCost: 1000,
+            //  pNotes: "Some Notes text",
+            //  category: "My Category",
+            //  sector: "Finance"
+            //});
+
+            //g.Draw();
         };
 
+        g.setOptions({
+          vCaptionType: 'Complete',
+          vQuarterColWidth: 36,
+          vDateTaskDisplayFormat: 'day dd month yyyy',
+          vDayMajorDateDisplayFormat: 'mon yyyy - Week ww',
+          vWeekMinorDateDisplayFormat: 'dd mon',
+          vLang: 'en',
+          vShowTaskInfoLink: 1,
+          vShowEndWeekDate: 0,
+          vAdditionalHeaders: {
+            },
+          vUseSingleCell: 10000,
+          vFormatArr: ['Day', 'Week', 'Month', 'Quarter'],
+        });
 
-        //var serviceRoot = "https://demos.telerik.com/kendo-ui/service";
-        //var tasksDataSource = new kendo.data.GanttDataSource({
-        //    transport: {
-        //        read: {
-        //            url: serviceRoot + "/GanttTasks",
-        //            dataType: "jsonp"
-        //        },
-        //        update: {
-        //            url: serviceRoot + "/GanttTasks/Update",
-        //            dataType: "jsonp"
-        //        },
-        //        destroy: {
-        //            url: serviceRoot + "/GanttTasks/Destroy",
-        //            dataType: "jsonp"
-        //        },
-        //        create: {
-        //            url: serviceRoot + "/GanttTasks/Create",
-        //            dataType: "jsonp"
-        //        },
-        //        parameterMap: function (options, operation) {
-        //            if (operation !== "read") {
-        //                return { models: kendo.stringify(options.models || [options]) };
-        //            }
-        //        }
-        //    },
-        //    schema: {
-        //        model: {
-        //            id: "id",
-        //            fields: {
-        //                id: { from: "ID", type: "number" },
-        //                orderId: { from: "OrderID", type: "number", validation: { required: true } },
-        //                parentId: { from: "ParentID", type: "number", defaultValue: null, validation: { required: true } },
-        //                start: { from: "Start", type: "date" },
-        //                end: { from: "End", type: "date" },
-        //                title: { from: "Title", defaultValue: "", type: "string" },
-        //                percentComplete: { from: "PercentComplete", type: "number" },
-        //                summary: { from: "Summary", type: "boolean" },
-        //                expanded: { from: "Expanded", type: "boolean", defaultValue: true }
-        //            }
-        //        }
-        //    }
-        //});
+        //JSGantt.parseJSON('@Html.Raw(Url.Action("GetReservationsHierarchy", "Product", new { DateFrom = DateTime.Now.AddDays(-7), DateTo = DateTime.Now.AddDays(-7).AddMonths(2) }))', g);
 
-        //var dependenciesDataSource = new kendo.data.GanttDependencyDataSource({
-        //    transport: {
-        //        read: {
-        //            url: serviceRoot + "/GanttDependencies",
-        //            dataType: "jsonp"
-        //        },
-        //        update: {
-        //            url: serviceRoot + "/GanttDependencies/Update",
-        //            dataType: "jsonp"
-        //        },
-        //        destroy: {
-        //            url: serviceRoot + "/GanttDependencies/Destroy",
-        //            dataType: "jsonp"
-        //        },
-        //        create: {
-        //            url: serviceRoot + "/GanttDependencies/Create",
-        //            dataType: "jsonp"
-        //        },
-        //        parameterMap: function (options, operation) {
-        //            if (operation !== "read") {
-        //                return { models: kendo.stringify(options.models || [options]) };
-        //            }
-        //        }
-        //    },
-        //    schema: {
-        //        model: {
-        //            id: "id",
-        //            fields: {
-        //                id: { from: "ID", type: "number" },
-        //                predecessorId: { from: "PredecessorID", type: "number" },
-        //                successorId: { from: "SuccessorID", type: "number" },
-        //                type: { from: "Type", type: "number" }
-        //            }
-        //        }
-        //    }
-        //});
+        g.AddTaskItemObject({
+          pID: 666,
+          pName: "Define Chart <strong>API</strong>",
+          pStart: "2017-02-25",
+          pEnd: "2017-03-17",
+          pPlanStart: "2017-04-01",
+          pPlanEnd: "2017-04-15 12:00",
+          pClass: "ggroupblack",
+          pLink: "",
+          pMile: 0,
+          pRes: "Brian",
+          pComp: 0,
+          pGroup: 1,
+          pParent: 0,
+          pOpen: 1,
+          pDepend: "",
+          pCaption: "",
+          pCost: 1000,
+          pNotes: "Some Notes text",
+          category: "My Category",
+          sector: "Finance"
+        });
 
-        //var gantt = $("#gantt").kendoGantt({
-        //    dataSource: tasksDataSource,
-        //    dependencies: dependenciesDataSource,
-        //    views: [
-        //        "day",
-        //        { type: "week", selected: true },
-        //        "month"
-        //    ],
-        //    columns: [
-        //        { field: "id", title: "ID", width: 60 },
-        //        { field: "title", title: "Title", editable: true, sortable: true },
-        //        { field: "start", title: "Start Time", format: "{0:MM/dd/yyyy}", width: 100, editable: true, sortable: true },
-        //        { field: "end", title: "End Time", format: "{0:MM/dd/yyyy}", width: 100, editable: true, sortable: true }
-        //    ],
-        //    height: 700,
+        g.Draw();
 
-        //    showWorkHours: false,
-        //    showWorkDays: false,
-
-        //    snap: false
-        //}).data("kendoGantt");
-
-        //$(document).bind("kendo:skinChange", function () {
-        //    gantt.refresh();
-        //});
     });
 </script>
