Reservations calendar widget

--- a/Grand.Web/Areas/Admin/Views/Home/Index.cshtml
+++ b/Grand.Web/Areas/Admin/Views/Home/Index.cshtml
@@ -242,9 +242,9 @@
     <div class="row">
         <div class="col-md-12">
             <div class="x_panel light bordered">
-                <div class="x_title">
+                <div class="x_title" style="position: relative;">
                     <h2 class="caption-subject font-blue bold uppercase">@T("Admin.Dashboard.ReservationsCalendar")</h2>
-                    <button class="btn btn-default" onclick="javascript:OpenWindow('@(Url.Action("ReservationsCalendarPopup", "Order"))', 920, 792, true); return false;"><i class="fa fa-external-link"></i></button>
+                    <button class="btn btn-default" style="position: absolute; top: 7px; right: 5px;" onclick="javascript:OpenWindow('@(Url.Action("ReservationsCalendarPopup", "Order"))', 920, 792, true); return false;"><i class="fa fa-external-link"></i></button>
                     <div class="clear"></div>
                 </div>
                 <div class="x_content">
