--- a/Grand.Web/Views/Order/Details.cshtml
+++ b/Grand.Web/Views/Order/Details.cshtml
@@ -46,13 +46,6 @@
     }
     @await Component.InvokeAsync("Widget", new { widgetZone = "orderdetails_page_top", additionalData = Model.Id })
     <div class="order-overview generalMarginSupporter">
-        <h5 class="order-number">
-            <strong>@T("Order.Order#")@Model.OrderNumber</strong>
-        </h5>
-        <h5 class="order-short-id">
-            <strong>@T("Order.ShortId"): @Model.ShortId</strong><br />
-            <small>@T("Order.ShortId.ApplicationCode")</small>
-        </h5>
         <div class="order-date">
             @T("Order.OrderDate"): @Model.CreatedOn.ToString("D")
         </div>
@@ -431,6 +424,11 @@ Model.BillingAddress.ZipPostalCodeEnabled)
                                                 <a href="@Url.RouteUrl("GetLicense", new {orderItemId = item.OrderItemGuid})">@T("DownloadableProducts.Fields.DownloadLicense")</a>
                                             </div>
                                         }
+
+                                        <div class="short_id">
+                                            @T("Order.Product(s).ShortId"): <strong>@item.ShortId</strong>
+                                        </div>
+
                                         @await Component.InvokeAsync("Widget", new { widgetZone = "orderdetails_product_line", additionalData = item.Id })
                                     </td>
                                     <td class="unit-price text-center">
