--- a/Grand.Web/Views/Home/Index.cshtml
+++ b/Grand.Web/Views/Home/Index.cshtml
@@ -2,10 +2,10 @@
     Layout = "_ColumnsOne";
 }
 <div class="page home-page custom-container">
-    @await Component.InvokeAsync("PushNotificationsRegistration")
-    @await Component.InvokeAsync("Widget", new { widgetZone = "home_page_top" })
+    @*@await Component.InvokeAsync("PushNotificationsRegistration")
+    @await Component.InvokeAsync("Widget", new { widgetZone = "home_page_top" })*@
     @await Component.InvokeAsync("TopicBlock", new { systemName = "HomePageText" })
-    @await Component.InvokeAsync("Widget", new { widgetZone = "home_page_before_categories" })
+    @*@await Component.InvokeAsync("Widget", new { widgetZone = "home_page_before_categories" })
     @await Component.InvokeAsync("HomePageCategories")
     @await Component.InvokeAsync("Widget", new { widgetZone = "home_page_before_products" })
     @await Component.InvokeAsync("PersonalizedProducts")
@@ -25,5 +25,5 @@
     @await Component.InvokeAsync("HomePageBlog")
     @await Component.InvokeAsync("Widget", new { widgetZone = "home_page_before_poll" })
     @await Component.InvokeAsync("HomePagePolls")
-    @await Component.InvokeAsync("Widget", new { widgetZone = "home_page_bottom" })
+    @await Component.InvokeAsync("Widget", new { widgetZone = "home_page_bottom" })*@
 </div>
