--- a/Grand.Web/Views/Shared/Header.cshtml
+++ b/Grand.Web/Views/Shared/Header.cshtml
@@ -1,42 +1,45 @@
-﻿<header role="presentation">
-    @await Component.InvokeAsync("Widget", new { widgetZone = "header" })
-    <nav class="navbar fixed-top navbar-light navUp mobile-top p-0" role="navigation">
-        <ul class="mobile-top-menu container px-2 px-sm-0 d-lg-none d-flex mb-0">
-            <li class="logo-mobile"></li>
-            <li class="nav-item d-flex align-items-center d-lg-none mobile-search" data-toggle="modal" data-target="#searchModal">
-                <a class="nav-link">
-                    <span class="mdi mdi-magnify"></span>
-                </a>
-            </li>
-        </ul>
-        <ul class="nav navbar-nav header-links flex-row container px-lg-3 px-0">
-            <li class="nav-item col d-lg-none d-flex menu-open-button">
-                <a class="js-offcanvas-trigger nav-link" data-offcanvas-trigger="left" href="#left">
-                    <div id="mobile-menu-opener"><span></span><span></span><span></span></div>
-                    <span class="d-lg-none d-block text-muted mobile-desc">@T("Mobile.Menu")</span>
-                </a>
-            </li>
-            <li class="nav-item float-xs-right mr-auto dropdowns-container">
-                <div class="generalDropDown btn-toolbar float-xs-right">
-                    @await Component.InvokeAsync("TaxTypeSelector")
-                    @await Component.InvokeAsync("CurrencySelector")
-                    @await Component.InvokeAsync("LanguageSelector")
-                    @await Component.InvokeAsync("StoreSelector")
-                    @await Component.InvokeAsync("Widget", new { widgetZone = "header_selectors" })
-                </div>
-            </li>
-            @await Component.InvokeAsync("HeaderLinks")
-            @await Component.InvokeAsync("ShoppingCartLinks")
-        </ul>
-    </nav>
-    <div class="container">
-        <div class="headBottom d-flex align-items-center d-lg-inline-flex text-lg-left text-center mt-0 mb-0">
-            <div class="header-logo pr-0 pl-0 d-lg-block d-none">
+﻿<header role="presentation" class="sticky-top">
+    <div class="row">
+        <div class="container d-flex h-100 justify-content-center order-1 col-12 order-xl-0 col-xl-2" id="mainLogo">
                 @await Component.InvokeAsync("Logo")
-            </div>
-            <div class="col-lg-6 col formSearch ml-auto pr-0 d-none d-lg-block">
-                @await Component.InvokeAsync("SearchBox")
-            </div>
+        </div>
+
+        <div class="order-0 col-12 order-xl-1 col-xl-10" id="headerContent">
+
+            <nav class="navbar navbar-expand-xl d-flex p-0">
+
+                <button class="navbar-toggler order-0" type="button" data-toggle="collapse" data-target="#navbarNavMainMenu" aria-controls="navbarNavMainMenu" aria-expanded="false">
+                    <span class="mdi mdi-36px mdi-menu"></span>
+                </button>
+
+                <div class="order-3 col-12 p-0 order-sm-1 col-sm-auto order-xl-1 col-xl-5" id="navbarNavSecondaryMenu">
+                    <div class="d-flex justify-content-center">
+                        <ul class="navbar-nav flex-row">
+                            @await Component.InvokeAsync("HeaderLinks")
+                            @await Component.InvokeAsync("ShoppingCartLinks")
+                            @await Component.InvokeAsync("HeaderProductsLinks")
+                            @await Component.InvokeAsync("LanguageSelector")
+                            @await Component.InvokeAsync("CurrencySelector")
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="order-1 col-auto order-sm-2 order-xl-2 col-xl-2" >
+                    <a id="navbarNavEuLogo" href="@Url.RouteUrl("Topic", new { SeName = Html.GetTopicSeName("EuropeanUnion").Result })">
+                        <img class="img-fluid flex-row" title="" src="/Themes/VeganHouse/Content/images/ue.jpg">
+                    </a>
+                </div>
+
+                <div class="order-2 col-12 p-0 order-sm-3 order-xl-0 col-xl-5" style="min-height: 0px !important;">
+                    <div class="collapse navbar-collapse" id="navbarNavMainMenu">
+                        <ul class="navbar-nav">
+                            @await Component.InvokeAsync("TopMenu")
+                        </ul>
+                    </div>
+                </div>
+
+            </nav>
+
         </div>
     </div>
 </header>
