--- a/Grand.Web/Views/Shared/_Topic.TopMenu.cshtml
+++ b/Grand.Web/Views/Shared/_Topic.TopMenu.cshtml
@@ -4,18 +4,18 @@
 {
     if (!topic.Children.Any())
     {
-        <li class="nav-item"><a class="pl-3 nav-link" href="@Url.RouteUrl("Topic", new { SeName=topic.SeName })">@topic.Name</a></li>
+        <li class="nav-item"><a class="nav-link" href="@Url.RouteUrl("Topic", new { SeName = topic.SeName })">@topic.Name</a></li>
     }
     else
     {
         <li class="nav-item dropdown">
-            <span class="pl-3 nav-link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">@topic.Name</span>
-            <ul class="dropdown-menu">
-                <li class="nav-item-back">
-                    <span class="pl-3 nav-link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="False">&larr; @T("Common.Back")</span>
-                </li>
-                <partial name="_Topic.TopMenu" model="topic.Children" />
-            </ul>
+            <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">@topic.Name</a>
+            <div class="dropdown-menu dropdown-primary">
+                @foreach (var subtopic in topic.Children)
+                {
+                    <a class="dropdown-item" href="@Url.RouteUrl("Topic", new { SeName = subtopic.SeName })">@subtopic.Name</a>
+                }
+            </div>
         </li>
     }
 }
