--- a/Grand.Web/Views/Shared/_OrderReviewData.cshtml
+++ b/Grand.Web/Views/Shared/_OrderReviewData.cshtml
@@ -5,7 +5,7 @@
         <div class="card-body">
             <div class="row">
                 <div class="col-12 col-sm-6">
-                    <ul class="billing-info pl-0">
+                    <ul class="billing-info info pl-0">
                         <li class="title">
                             <h5>@T("Order.BillingAddress")</h5>
                         </li>
