--- a/Grand.Web/Themes/VeganHouse/Content/css/style.css
+++ b/Grand.Web/Themes/VeganHouse/Content/css/style.css
@@ -1,6 +1,7 @@
 ﻿/** Global */
 * {
     font-family: Tahoma;
+    border-radius: 0px !important;
 }
 
 .dropdown-menu {
@@ -29,6 +30,110 @@ a.dropdown-item:hover,
 a.dropdown-item.active {
     color: #FFFFFF !important;
 }
+
+.form-control {
+    border-radius: 0px;
+}
+
+.form-control:focus {
+    border-color: #91e2cc;
+    box-shadow: 0 0 0 .2rem rgba(145, 226, 204, 0.23);
+}
+
+.btn {
+    border-radius: 0px;
+}
+
+.btn-info, .btn-primary {
+    border-color: #123135;
+    background-color: #16A97A;
+    color: #FFFFFF !important;
+}
+
+.btn-outline-info {
+    border-color: #16A97A;
+    color: #16A97A;
+}
+
+.btn-info:hover, .btn-primary:hover, .btn-outline-info:hover {
+    border-color: #123135;
+    background-color: #2c7d76;
+}
+
+.btn-secondary, .btn-secondary:hover {
+    border-color: #123135;
+    color: #FFFFFF !important;
+}
+
+.card {
+    border-radius: 0px;
+    border: 1px solid #123135;
+}
+
+.card-header, .card-header * {
+    background-color: #2c7d76 !important;
+    border-radius: 0px !important;
+    color: #FFFFFF;
+    text-transform: uppercase;
+    font-size: 16px;
+    font-weight: 300;
+}
+
+.card-title, .card-header h4 {
+    margin-bottom: 0px;
+}
+
+
+.bg-info {
+    background-color: #2c7d76 !important;
+}
+
+::-moz-selection {
+    background-color: #2c7d76 !important;
+    color: #FFFFFF;
+}
+
+::selection {
+    background-color: #2c7d76 !important;
+    color: #FFFFFF;
+}
+
+select option:hover {
+    background-color: #2c7d76 !important;
+    color: #FFFFFF;
+}
+
+
+.generalTitle, .page-title h1, h2.h5, h2.h5 > * {
+    font-family: Georgia,Times,Times New Roman,serif !important;
+    font-weight: 300;
+    line-height: 1.2;
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
+.block-navigation ul.list {
+    list-style-type: none;
+    padding-left: 10px;
+}
+
+.block-navigation ul.list li {
+    padding: 5px;
+}
+
+ul.info {
+    list-style-type: none;
+    padding: 0px;
+}
+
+ul.info li.title {
+    margin-top: 40px;
+}
+
+ul.info li.title:first-child {
+    margin-top: 0px;
+}
+
 
 /** Header */
 header {
@@ -195,13 +300,29 @@ footer h5 {
 #footerLogos {
     background-color: #FFFFFF;
 }
-/** EuCookieLaw Component */
-#eu-cookie-bar-notification {
-    position: absolute;
-    z-index: 10000;
-    top: 0px;
-    left: 0px;
-    right: 0px;
+
+/** Main container */
+main .page-container {
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
+main .page-container a {
+    color: #2c7d76;
+}
+
+main .page-container a:hover, main .page-container a:active {
+    color: #16A97A;
+}
+
+/** Order details */
+.order-details-page .products, .order-details-page .order-overview {
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
+.order-details-page .shopping-cart {
+    width: 100%;
 }
 
 /** Animate.css enhancements */
